xliff-22/test-suite/core/valid/sourceOnly.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <segment id="s1">
    <source>source</source>
   </segment>
   <ignorable>
    <source> </source>
   </ignorable>
  </unit>
 </file>
</xliff>
