xliff-22/test-suite/core/invalid/bad_InvalidNotesInFile.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <segment>
    <source>text</source>
   </segment>
  </unit>
  <notes>
   <note>note</note>
  </notes>
 </file>
</xliff>
